# discord-bot-stages

./: .gitignore  README.md  bot.py  discord-bot-stages.service
bot/: bot.py
progress-tracker/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  run.sh  start.sh
progress-tracker/API/: admin.py  models.py  serializers.py  urls.py  views.py
progress-tracker/API/management/commands/: gen_random_fixtures.py
progress-tracker/API/migrations/: 0001_initial.py  0002_auto_20200715_1418.py  0003_auto_20200715_1419.py  0004_auto_20200715_1629.py  0005_auto_20200717_1623.py  0006_candidat_discord_name.py  0007_auto_20200719_1006.py  0008_auto_20200720_0902.py  0009_auto_20200720_1612.py  0010_parcours_code.py  0011_auto_20201024_1032.py  0012_big_auto_field.py
progress-tracker/API/templates/: index.html
progress-tracker/Progression/: settings.py  urls.py  wsgi.py
progress-tracker/dev-fixtures/: auth.yaml  authtoken.yaml  candidats.yaml  parcours.yaml  recherches.yaml  stages.yaml  sujets.yaml
