[tool.poetry]
name = "progress-tracker"
version = "0.2.0"
description = "Django Server that tracks students progesses on exercices"
authors = ["France-IOI <contact@france-ioi.org>"]
license = "GPLv3"
readme = "README.md"
packages = [
    { include = "API" },
    { include = "Progression" },
    { include = "manage.py" },
]

[tool.poetry.dependencies]
python = "^3.7.2"
gunicorn = "^20.1.0"
Django = "~3.0.0"
mysqlclient = "^2.1.1"
python-dateutil = "^2.8.2"
whitenoise = "^6.2.0"
django-filter = "21.1"
djangorestframework = "3.13.1"
python-dotenv = "^0.21.0"
pyyaml = "^6.0"
django-cors-headers = "3.11.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.5"
isort = "^5.10.1"
poethepoet = "^0.16.4"

[tool.poe.tasks]
migrate = "python manage.py migrate"
collectstatic = "python manage.py collectstatic"
seed-db = [
    { ref = "migrate" },
    { shell = "python manage.py loaddata $(ls dev-fixtures | xargs)" },
]
dev-server = [
    { ref = "migrate" },
    { ref = "collectstatic" },
    { cmd = "python manage.py runserver" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
